fixing overflow

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html {
 
 body,
 html {
+  overflow: hidden;
   width: 100%;
   height: 100%;
   background-color: #000;
